# PROB

./: .gitignore  README.md  frames.gv  run_20250704_182104.bag  run_20250704_183238.bag
devel/: .catkin  local_setup.sh
devel/lib/example_package/: filter_node
devel/lib/pkgconfig/: example_package.pc  my_cool_project.pc
devel/share/example_package/cmake/: example_packageConfig.cmake
devel/share/my_cool_project/cmake/: my_cool_projectConfig.cmake
src/example_package/: CMakeLists.txt
src/example_package/include/: ExtendedKalmanFilter.h  KalmanFilter.h  ParticleFilter.h  extended_kf.h  linear_kf.h  particle_filter.h
src/example_package/scripts/: plot_trajectories.py  record_and_plot.sh
src/example_package/src/: ExtendedKalmanFilter.cpp  KalmanFilter.cpp  ParticleFilter.cpp  extended_kf.cpp  filter_node.cpp  filter_node_1.cpp  goal_publisher_node.cpp  linear_kf.cpp  particle_filter.cpp  particle_filter_node.cpp  pf_node.cpp  som.cpp
src/my_cool_project/: CMakeLists.txt  package.xml
src/my_cool_project/config/: my_cool_config.rviz  my_cool_rviz.rviz
src/my_cool_project/launch/: cool.launch  cool_file.launch  move_base.launch  myfile.launch
src/my_cool_project/maps/: my_cool_map.yaml  my_new_map_1.yaml
